content-only build for ripple.com auto-deploy (test)

--- a/data-api-v2-tool.html
+++ b/data-api-v2-tool.html
@@ -152,7 +152,7 @@
     <script type='text/javascript'>
     // Set some constants for the REST tool script
     var URL_BASE = 'https://data.ripple.com';
-    var DOC_BASE = 'reference-data-api.html';
+    var DOC_BASE = 'https://ripple.com/build/data-api-v2/';
     </script>
       </main>
   </div>
