--- a/tool-jsonrpc.html
+++ b/tool-jsonrpc.html
@@ -152,7 +152,7 @@
     <script type='text/javascript'>
     // Set some constants for the REST tool script
     var URL_BASE = 'http://localhost/rippled';
-    var DOC_BASE = 'reference-rippled.html';
+    var DOC_BASE = 'https://ripple.com/build/rippled-apis/';
     </script>
       </main>
   </div>
