--- a/concept-paths.html
+++ b/concept-paths.html
@@ -1,3 +1,4 @@
+<div class="content">
 <h1 id="paths">Paths</h1>
 <p>In the Ripple Consensus Ledger, paths define a way for payments to flow through intermediary steps on their way from sender to receiver. Paths enable cross-currency payments by connecting sender and receiver via market makers. Paths also enable complex settlement of offsetting debts.</p>
 <p>A single Payment transaction in the Ripple Consensus Ledger can use multiple paths, combining liquidity from different sources to deliver the desired amount. Thus, a transaction includes a <em>path set</em>, which is a collection of possible paths to take. The paths in a path set must start and end with the same currency.</p>
@@ -107,3 +108,4 @@
 </tr>
 </tbody>
 </table>
+</div>
