--- a/reference-rippleapi.html
+++ b/reference-rippleapi.html
@@ -1,3 +1,4 @@
+<div class="content">
 <p style="margin-top: 1em; font-style: italic">Updated for <a href="https://github.com/ripple/ripple-lib/releases/0.17.0" title="view on GitHub">version 0.17.0</a></p>
 <h1 id="introduction">Introduction</h1>
 <p>RippleAPI is the official client library to the Ripple Consensus Ledger. Currently, RippleAPI is only available in JavaScript. 
@@ -5180,3 +5181,4 @@ return api.computeLedgerHash(ledger);
   }
 });
 </code></pre>
+</div>
