--- a/reference-rippled.html
+++ b/reference-rippled.html
@@ -1,3 +1,4 @@
+<div class="content">
 <h1 id="rippled">rippled</h1>
 <p>The core peer-to-peer server that operates the Ripple Network is called <code>rippled</code>. Each <code>rippled</code> server connects to the Ripple Network, relays cryptographically signed transactions, and maintains a local copy of the complete shared global ledger. The source code for <code>rippled</code> is written in C++, and is <a href="https://github.com/ripple/rippled">available on GitHub under an open-source license</a>.</p>
 <ul>
@@ -12462,3 +12463,4 @@ Connecting to 127.0.0.1:5005
 <li>Any of the <a href="#universal-errors">universal error types</a>.</li>
 </ul>
 <!---- rippled release notes links ---->
+</div>
