--- a/reference-transaction-format.html
+++ b/reference-transaction-format.html
@@ -1,3 +1,4 @@
+<div class="content">
 <h1 id="transactions">Transactions</h1>
 <p>A <em>Transaction</em> is the only way to modify the Ripple Ledger. All transactions have certain fields in common:</p>
 <ul>
@@ -2051,3 +2052,4 @@
 </tr>
 </tbody>
 </table>
+</div>
