--- a/tutorial-gateway-guide.html
+++ b/tutorial-gateway-guide.html
@@ -1,3 +1,4 @@
+<div class="content">
 <h1 id="becoming-a-ripple-gateway">Becoming a Ripple Gateway</h1>
 <p>If you have an existing online financial system, you can expand it to act as a gateway in the the Ripple Consensus Ledger (RCL). <a href="https://ripple.com/knowledge_center/gateways/">Gateways</a> are the businesses that link the Ripple Consensus Ledger to the rest of the world. By becoming a Ripple gateway, existing online financial services, such as payment systems and digital currency exchange, can gain several advantages:</p>
 <ul>
@@ -561,3 +562,4 @@ Content-Type: application/json
 <h2 id="rippletxt">ripple.txt</h2>
 <p>The <a href="https://wiki.ripple.com/Ripple.txt">ripple.txt</a> standard provides a way to publish information about your gateway so that automated tools and applications can read and understand it.</p>
 <p>For example, if you run a validating <code>rippled</code> server, you can use ripple.txt to publish the public key of your validating server. You can also publish information about what currencies your gateway issues, and which Ripple addresses you control, to protect against impostors or confusion.</p>
+</div>
