--- a/tutorial-multisign.html
+++ b/tutorial-multisign.html
@@ -1,3 +1,4 @@
+<div class="content">
 <h1 id="how-to-multi-sign">How to Multi-Sign</h1>
 <p>Multi-signing is one of three ways to authorize transactions for the Ripple Consensus Ledger, alongside signing with <a href="https://ripple.com/build/transactions/#setregularkey">regular keys</a> and master keys. You can configure your address to allow any combination of the three methods to authorize transactions.</p>
 <p>Benefits of multi-signing include:</p>
@@ -534,3 +535,4 @@ Connecting to 127.0.0.1:5005
     }
 }
 </code></pre>
+</div>
