--- a/tutorial-reliable-transaction-submission.html
+++ b/tutorial-reliable-transaction-submission.html
@@ -1,3 +1,4 @@
+<div class="content">
 <h1 id="reliable-transaction-submission">Reliable Transaction Submission</h1>
 <p>Gateways and back-end applications should use the best practices described here to ensure that transactions are validated or rejected in a verifiable and timely fashion.  You should submit transactions to trusted (locally operated) <code>rippled</code> servers.</p>
 <p>The best practices detailed in this document allow applications to submit transactions to the Ripple network while achieving:</p>
@@ -387,3 +388,4 @@
 <li><a href="http://ripple.com/knowledge_center/the-ripple-ledger-consensus-process/">Overview of Ripple Ledger Consensus Process</a></li>
 <li><a href="https://ripple.com/knowledge_center/reaching-consensus-in-ripple/">Reaching Consensus in Ripple</a></li>
 </ul>
+</div>
