--- a/tutorial-rippleapi-beginners-guide.html
+++ b/tutorial-rippleapi-beginners-guide.html
@@ -1,3 +1,4 @@
+<div class="content">
 <h1 id="rippleapi-beginners-guide">RippleAPI Beginners Guide</h1>
 <p>This tutorial guides you through the basics of building a simple Ripple-connected application using <a href="http://nodejs.org/">Node.js</a> and <a href="https://ripple.com/build/rippleapi/">RippleAPI</a>, a simple JavaScript API for accessing the Ripple Consensus Ledger.</p>
 <p>The scripts and configuration files used in this guide are <a href="https://github.com/ripple/ripple-dev-portal/tree/master/content/code_samples/rippleapi_quickstart">available in the Ripple Dev Portal GitHub Repository</a>.</p>
@@ -332,3 +333,4 @@ npm WARN notsup Not compatible with your operating system or architecture: fseve
 &lt;body&gt;&lt;/body&gt;
 &lt;/html&gt;
 </code></pre>
+</div>
