--- a/tutorial-rippled-setup.html
+++ b/tutorial-rippled-setup.html
@@ -1,3 +1,4 @@
+<div class="content">
 <h1 id="operating-rippled-servers">Operating rippled Servers</h1>
 <p>The core server of the Ripple peer-to-peer network is <a href="https://ripple.com/build/rippled-apis/"><code>rippled</code></a>. Anyone can run their own <code>rippled</code> server that follows the network and keeps a complete copy of the Ripple ledger. You can even have your server perform validations and participate in the consensus process.</p>
 <p>This page contains instructions for:</p>
@@ -277,3 +278,4 @@ ssdecohJMDPFuUPDkmG1w4objZyp4
 </li>
 <li>Add the public keys (for peer communication) of each of your other servers under the <code>[cluster_nodes]</code> section.</li>
 </ul>
+</div>
