--- a/concept-amendments.html
+++ b/concept-amendments.html
@@ -1,3 +1,4 @@
+<div class="content">
 <h1 id="amendments">Amendments</h1>
 <p><em>(New in <a href="https://wiki.ripple.com/Rippled-0.31.0">version 0.31.0</a>)</em></p>
 <p>The Amendments system provides a means of introducing new features to the decentralized Ripple consensus network without causing disruptions. The amendments system works by utilizing the core consensus process of the network to approve any changes by showing continuous support before those changes go into effect. An amendment normally requires <strong>80% support for two weeks</strong> before it can apply.</p>
@@ -183,3 +184,4 @@ TrustSetAuth
 </table>
 <p>Introduces Tickets as a way to reserve a transaction sequence number for later execution. Creates the <code>Ticket</code> ledger node type and the transaction types <code>TicketCreate</code> and <code>TicketCancel</code>.</p>
 <p>This amendment is still in development.</p>
+</div>
