--- a/concept-fee-voting.html
+++ b/concept-fee-voting.html
@@ -1,3 +1,4 @@
+<div class="content">
 <h1 id="fee-voting">Fee Voting</h1>
 <p>Validators can vote for changes to basic <a href="https://ripple.com/build/transaction-cost/">transaction cost</a> as well as <a href="https://ripple.com/build/reserves/">reserve requirements</a>. If the preferences in a validator's configuration are different than the network's current settings, the validator expresses its preferences to the network periodically. If a quorum of validators agrees on a change, they can apply a change that takes effect thereafter. Validators may do this for various reasons, especially to reflect long-term changes in the value of XRP.</p>
 <p>Operators of <a href="https://ripple.com/build/rippled-setup/#running-a-validator"><code>rippled</code> validators</a> can set their preferences for the transaction cost and reserve requirements in the <code>[voting]</code> stanza of the <code>rippled.cfg</code> file. <strong>Caution:</strong> insufficient requirements could expose the Ripple peer-to-peer network to denial-of-service attacks. The parameters you can set are as follows:</p>
@@ -38,3 +39,4 @@
 <li><strong>Flag ledger +1</strong>: Validators insert SetFee pseudo-transaction into their proposed ledgers.</li>
 <li><strong>Flag ledger +2</strong>: New settings take effect, if a SetFee psuedotransaction achieved consensus.</li>
 </ul>
+</div>
