--- a/concept-freeze.html
+++ b/concept-freeze.html
@@ -1,3 +1,4 @@
+<div class="content">
 <h1 id="freeze-features">Freeze Features</h1>
 <p>The Ripple Consensus Ledger gives accounts the ability to freeze non-XRP balances, which can be useful to comply with regulatory requirements, or while investigating suspicious activity. There are three settings related to freezes:</p>
 <ul>
@@ -682,3 +683,4 @@ api.connect().then(() =&gt; {
 <li><a href="https://ripple.com/files/GB-2014-02.pdf">Gateway Bulletin GB-2014-02 New Feature: Balance Freeze</a></li>
 <li><a href="https://github.com/ripple/ripple-dev-portal/tree/gh-pages/content/code_samples/freeze">Freeze Code Samples</a></li>
 </ul>
+</div>
