--- a/concept-reserves.html
+++ b/concept-reserves.html
@@ -1,3 +1,4 @@
+<div class="content">
 <h1 id="reserves">Reserves</h1>
 <p>The Ripple Consensus Ledger applies <em>reserve requirements</em>, in XRP, to protect the shared global ledger from growing excessively large as the result of spam or malicious usage. The goal is to constrain the growth of the ledger to match <a href="https://en.wikipedia.org/wiki/Moore's_law">Moore's Law</a> so that a current commodity-level machine can always fit the current ledger in RAM and the full ledger history on disk.</p>
 <p>Each account in the shared global ledger must hold a minimum of XRP in order to submit transactions, and it cannot send this XRP to other accounts. You cannot create a new account unless you send enough XRP to meet the minimum reserve requirement.</p>
@@ -24,3 +25,4 @@
 <p><strong>Exception:</strong> When an account is below the reserve requirement, it can send new <a href="https://ripple.com/build/transactions/#offercreate">OfferCreate transactions</a> to acquire more XRP, or other currencies on its existing trust lines. These transactions cannot create new <a href="https://ripple.com/build/ledger-format/#ripplestate">trust lines</a>, or <a href="https://ripple.com/build/ledger-format/#offer">Offer nodes in the ledger</a>, so they can only execute trades that consume Offers that are already in the order books.</p>
 <h2 id="changing-the-reserve-requirements">Changing the Reserve Requirements</h2>
 <p>The Ripple Consensus Ledger has a mechanism for changing the reserve requirements in order to account for long-term changes in the value of XRP. Any changes have to be approved by the consensus process. See <a href="https://ripple.com/build/fee-voting/">Fee Voting</a> for more information.</p>
+</div>
